--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,20 @@
 h1 {
     display: flex;
-    align-self: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+p {
+    display: flex;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+div.container5 {
+    height: 10em;
+    display: flex;
+    align-items: center;
+}
+div.container5 p {
+    margin: 0;
+}  
