--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,60 @@
 h1 {
-    display: flex;
+    margin-top: 200px;
     text-align: center;
+    font-size: 500%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    text-shadow: 2px 1px 10px rgb(69, 69, 69);
+}
+
+h1 span {
+    background-color: black;
 }
 
 p {
-    display: flex;
     text-align: center;
-    font-family: 
+    text-shadow: 20cm black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    text-shadow: 1px 1px 15px black;
+}
+
+body {
+    background-image: linear-gradient(to right, #ce565a, #723aa3);
+    background-color: black;
+    background-size: 100%;
+    background-repeat: repeat;
+}
+
+a {
+    color: white;
+    font-weight: bold;
+    text-shadow: 1px 1px 20px black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+}
+
+#botao {
+    text-decoration: none;
+}
+
+#rodape {
+    text-align: center;
 }
 
 div.container5 {
-    height: 10em;
-    display: flex;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 5em;
+    font-weight: bold;
+    font-size: 250%;
     align-items: center;
+}
+
+div.container5 p {
     margin: 0;
 }  
+
+.ponteiro {
+    cursor: pointer;
+}
